# automates

./: .codecov.yml  .gitignore  .travis.yml  Dockerfile  Dockerfile_fastapi_server  Gemfile  LICENSE.txt  Makefile  README.md  _config.yml  docker-compose_fastapi_server.yml  environment.yml  index.md  modFileLog.json  pytest.ini  requirements.txt  setup.py  software.md  team.md
Gauravs_DataGeneration_Scripts/: LaTeX_MathML_Converter_MathJax.py  LaTeX_MathML_Converter_latex2mml.py  ParsingLatexEqns.py  README.md  Replacing_Macros_inEqn.py  TeX2pdf.py  TeX_Builder.py  json2js.py  latex2pdf&image.py  multi_subprocessing_example.py  pdf2png.py  tex2png_MP.py  unzip_combineFiles.py
_includes/: head.html  sidebar.html  toc.html
_layouts/: default.html  page.html
automates/: docker-compose.yml  jupyter_tools.py
code_summarization/: README.md  w2v.sh
demo/: README.md  app.py  app.wsgi  crop_yield.f  requirements.txt  run.sh  setup_aws_ec2.sh  setup_sista_vm.sh  webapp.py
development_data/: README.txt  petasce.json  petpt_equations_example.tesseract.txt  petpt_equations_example.txt  petpt_equations_example_edited.txt  petpt_extracted_comments.json
docs/: software.md  team.md
documentation/: GrFN_specification.md  TR-standalone-reading-instructions.md  for2py.md
equation_extraction/: .gitignore  Dockerfile  Makefile  README.md  README_FIRST.md  analyze_data.py  augmentation_arxiv.py  brat_stats.py  collect_data.py  convert_arxiv_output_to_opennmt.py  convert_tex_to_png.sh  convert_to_png.sh  copy_src_for_annotation_eqns.py  docker.sh  expand_arxiv.py  im2markup_ocelote.md  image_utils.py  json2brat.py  latex.py  preamble.py  (+7 more)
tests/data/program_analysis/GCC2GrFN/model_examples/stemp_soilt/original/: CMakeLists.txt  OPSTEMP.for  STEMP.for  a.out
tests/data/program_analysis/GCC2GrFN/model_examples/stemp_soilt/original/cmake/Modules/: SetCompileFlag.cmake  SetFortranFlags.cmake
(+4151 files in other folders)
